==> naves-thiago/elua/src/platform/str9/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include "stacks.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "91x_scu.h"
#include "91x_fmi.h"
#include "91x_gpio.h"
#include "91x_uart.h"
#include "91x_tim.h"
#include "common.h"
#include "platform_conf.h"
#include "91x_vic.h"
#include "lrotable.h"
#include "91x_i2c.h"
#include "91x_wiu.h"
#include "buf.h"
#include "elua_adc.h"
#include "91x_adc.h"
#include "91x_ssp.h"
#include "utils.h"

int platform_init()
{
  unsigned i;
  TIM_InitTypeDef tim;
  TIM_TypeDef* base;  
        
  // System configuration
  platform_config_scu();
  
  // PIO setup
  for( i = 0; i < 10; i ++ )
    GPIO_DeInit( ( GPIO_TypeDef* )port_data[ i ] );
    
  // UART setup
  platform_gpio_uart_setup();

  // Initialize timers
  for( i = 0; i < NUM_PHYS_TIMER; i ++ )
  {
    base = ( TIM_TypeDef* )str9_timer_data[ i ];
    TIM_DeInit( base );
    TIM_StructInit( &tim );
    tim.TIM_Clock_Source = TIM_CLK_APB;
    tim.TIM_Prescaler = 255;      
    TIM_Init( base, &tim );    
    TIM_CounterCmd( base, TIM_START );
  }
  
 cmn_platform_init();

#ifdef BUILD_ADC
  // Setup ADCs
  platform_setup_adcs();
#endif

  // Initialize system timer
  cmn_systimer_set_base_freq( 1000000 );
  cmn_systimer_set_interrupt_freq( VTMR_FREQ_HZ );
  platform_s_timer_set_match_int( VTMR_TIMER_ID, 1000000 / VTMR_FREQ_HZ, PLATFORM_TIMER_INT_CYCLIC );
  return PLATFORM_OK;
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
  GPIO_TypeDef* base = ( GPIO_TypeDef* )port_data[ port ];
  GPIO_InitTypeDef data;
  pio_type retval = 1;
  
  GPIO_StructInit( &data );
  switch( op )
  {
    case PLATFORM_IO_PORT_SET_VALUE:    
      GPIO_Write( base, ( u8 )pinmask );
      break;
      
    case PLATFORM_IO_PIN_SET:
      GPIO_WriteBit( base, ( u8 )pinmask, Bit_SET );
      break;
      
    case PLATFORM_IO_PIN_CLEAR:
      GPIO_WriteBit( base, ( u8 )pinmask, Bit_RESET );
      break;
      
    case PLATFORM_IO_PORT_DIR_OUTPUT:
      pinmask = 0xFF;     
    case PLATFORM_IO_PIN_DIR_OUTPUT:
      data.GPIO_Direction = GPIO_PinOutput;
      data.GPIO_Type = GPIO_Type_PushPull ;
      data.GPIO_Alternate=GPIO_OutputAlt1;
      data.GPIO_Pin = ( u8 )pinmask;
      GPIO_Init(base, &data);
      break;
      
    case PLATFORM_IO_PORT_DIR_INPUT:
      pinmask = 0xFF;     
    case PLATFORM_IO_PIN_DIR_INPUT:
      data.GPIO_Pin = ( u8 )pinmask;
      GPIO_Init(base, &data);
      break;    
            
    case PLATFORM_IO_PORT_GET_VALUE:
      retval = GPIO_Read( base );
      break;
      
    case PLATFORM_IO_PIN_GET:
      retval = GPIO_ReadBit( base, ( u8 )pinmask );
      break;
      
    default:
      retval = 0;
      break;
  }
  return retval;
}

u32 platform_uart_setup( unsigned id, u32 baud, int databits, int parity, int stopbits )
{
  UART_InitTypeDef UART_InitStructure;
  UART_TypeDef* p_uart = ( UART_TypeDef* )uarts[ id ];
    
  // Then configure UART parameters
  switch( databits )
  {
    case 5:
      UART_InitStructure.UART_WordLength = UART_WordLength_5D;
      break;      
    case 6:
      UART_InitStructure.UART_WordLength = UART_WordLength_6D;
      break;      
    case 7:
      UART_InitStructure.UART_WordLength = UART_WordLength_7D;
      break;      
    case 8:
      UART_InitStructure.UART_WordLength = UART_WordLength_8D;
      break;
  }
  if( stopbits == PLATFORM_UART_STOPBITS_1 )
    UART_InitStructure.UART_StopBits = UART_StopBits_1;    
  else
    UART_InitStructure.UART_StopBits = UART_StopBits_2;
  if( parity == PLATFORM_UART_PARITY_EVEN )
    UART_InitStructure.UART_Parity = UART_Parity_Even;
  else if( parity == PLATFORM_UART_PARITY_ODD )
    UART_InitStructure.UART_Parity = UART_Parity_Odd;
  else
    UART_InitStructure.UART_Parity = UART_Parity_No;
  UART_InitStructure.UART_BaudRate = baud;
  UART_InitStructure.UART_HardwareFlowControl = UART_HardwareFlowControl_None;
  UART_InitStructure.UART_Mode = UART_Mode_Tx_Rx;
  UART_InitStructure.UART_FIFO = UART_FIFO_Enable;
  UART_InitStructure.UART_TxFIFOLevel = UART_FIFOLevel_1_2; /* FIFO size 16 bytes, FIFO level 8 bytes */
  UART_InitStructure.UART_RxFIFOLevel = UART_FIFOLevel_1_2; /* FIFO size 16 bytes, FIFO level 8 bytes */

  UART_DeInit( p_uart );
  UART_Init( p_uart , &UART_InitStructure );
  UART_Cmd( p_uart, ENABLE );
  
  return baud;
}

void platform_s_uart_send( unsigned id, u8 data )
{
  UART_TypeDef* p_uart = ( UART_TypeDef* )uarts[ id ];

//  while( UART_GetFlagStatus( STR9_UART, UART_FLAG_TxFIFOFull ) == SET );
  UART_SendData( p_uart, data );
  while( UART_GetFlagStatus( p_uart, UART_FLAG_TxFIFOFull ) != RESET );  
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
  UART_TypeDef* p_uart = ( UART_TypeDef* )uarts[ id ];

  if( timeout == 0 )
  {
    // Return data only if already available
    if( UART_GetFlagStatus( p_uart, UART_FLAG_RxFIFOEmpty ) != SET )
      return UART_ReceiveData( p_uart );
    else
      return -1;
  }
  while( UART_GetFlagStatus( p_uart, UART_FLAG_RxFIFOEmpty ) == SET );
  return UART_ReceiveData( p_uart ); 
}

void platform_s_timer_delay( unsigned id, timer_data_type delay_us )
{
  TIM_TypeDef* base = ( TIM_TypeDef* )str9_timer_data[ id ];  
  u32 freq;
  timer_data_type final;
  
  freq = platform_timer_get_clock( id );
  final = ( ( u64 )delay_us * freq ) / 1000000;
  if( final > 2 )
    final -= 2;
  else
    final = 0;
  if( final > 0xFFFF )
    final = 0xFFFF;
  TIM_CounterCmd( base, TIM_STOP );
  TIM_CounterCmd( base, TIM_CLEAR );  
  TIM_CounterCmd( base, TIM_START );  
  while( TIM_GetCounterValue( base ) >= 0xFFFC );
  while( TIM_GetCounterValue( base ) < final );  
}

timer_data_type platform_s_timer_op( unsigned id, int op, timer_data_type data )
{
  u32 res = 0;
  TIM_TypeDef* base = ( TIM_TypeDef* )str9_timer_data[ id ];  

  switch( op )
  {
    case PLATFORM_TIMER_OP_START:
      TIM_CounterCmd( base, TIM_STOP );
      TIM_CounterCmd( base, TIM_CLEAR );  
      TIM_CounterCmd( base, TIM_START );  
      while( TIM_GetCounterValue( base ) >= 0xFFFC );        
      break;
      
    case PLATFORM_TIMER_OP_READ:
      res = TIM_GetCounterValue( base );
      break;
      
    case PLATFORM_TIMER_OP_SET_CLOCK:
      res = platform_timer_set_clock( id, data );
      break;
      
    case PLATFORM_TIMER_OP_GET_CLOCK:
      res = platform_timer_get_clock( id );
      break;

    case PLATFORM_TIMER_OP_GET_MAX_CNT:
      res = 0xFFFF;
      break;
  }
  return res;
}

u64 platform_timer_sys_raw_read()
{
  TIM_TypeDef* base = ( TIM_TypeDef* )str9_timer_data[ VTMR_TIMER_ID ];

  return TIM_GetCounterValue( base );
}

int platform_adc_update_sequence( )
{ 
  elua_adc_dev_state *d = adc_get_dev_state( 0 );
    
  ADC_Cmd( DISABLE );
  ADC_DeInit();
  
  ADC_InitStructure.ADC_Channel_0_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_1_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_2_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_3_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_4_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_5_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_6_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_7_Mode = ADC_No_Conversion;

  d->seq_ctr = 0;
  while( d->seq_ctr < d->seq_len )
  {
    GPIO_ANAPinConfig( adc_gpio_chan[ d->ch_state[ d->seq_ctr ]->id ], ENABLE );

    // This is somewhat terrible, but the API doesn't provide an alternative
    switch( d->ch_state[ d->seq_ctr ]->id )
    {
      case 0:
        ADC_InitStructure.ADC_Channel_0_Mode = ADC_NoThreshold_Conversion;
        break;
      case 1:
        ADC_InitStructure.ADC_Channel_1_Mode = ADC_NoThreshold_Conversion;
        break;
      case 2:
        ADC_InitStructure.ADC_Channel_2_Mode = ADC_NoThreshold_Conversion;
        break;
      case 3:
        ADC_InitStructure.ADC_Channel_3_Mode = ADC_NoThreshold_Conversion;
        break;
      case 4:
        ADC_InitStructure.ADC_Channel_4_Mode = ADC_NoThreshold_Conversion;
        break;
      case 5:
        ADC_InitStructure.ADC_Channel_5_Mode = ADC_NoThreshold_Conversion;
        break;
      case 6:
        ADC_InitStructure.ADC_Channel_6_Mode = ADC_NoThreshold_Conversion;
        break;
      case 7:
        ADC_InitStructure.ADC_Channel_7_Mode = ADC_NoThreshold_Conversion;
        break;
    }
    d->seq_ctr++;
  }
  d->seq_ctr = 0;
  
  ADC_Cmd( ENABLE );
  ADC_PrescalerConfig( 0x2 );
  ADC_Init( &ADC_InitStructure );

  ADC_ITConfig( ADC_IT_ECV, ENABLE );

  return PLATFORM_OK;
}

int platform_adc_start_sequence()
{ 
    elua_adc_dev_state *d = adc_get_dev_state( 0 );

    // Only force update and initiate if we weren't already running
    // changes will get picked up during next interrupt cycle
    if ( d->running != 1 )
    {
      // Bail if we somehow were trying to set up clocked conversion
      if( d->clocked == 1 )
        return PLATFORM_ERR;

      adc_update_dev_sequence( 0 );

      d->running = 1;

      ADC_ClearFlag( ADC_FLAG_ECV );

      ADC_ITConfig( ADC_IT_ECV, ENABLE );

      ADC_ConversionCmd( ADC_Conversion_Start );
    }

    return PLATFORM_OK;
  }

u32 platform_pwm_setup( unsigned id, u32 frequency, unsigned duty )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];
  u32 base = SCU_GetPCLKFreqValue() * 1000;
  u32 div = ( base / 256 ) / frequency;
  TIM_InitTypeDef tim;

  TIM_DeInit( p_timer );
  tim.TIM_Mode = TIM_PWM;
  tim.TIM_Clock_Source = TIM_CLK_APB;       
  tim.TIM_Prescaler = 0xFF;       
  tim.TIM_Pulse_Level_1 = TIM_HIGH;   
  tim.TIM_Period_Level = TIM_LOW;    
  tim.TIM_Full_Period = div;
  tim.TIM_Pulse_Length_1 = ( div * duty ) / 100;
  TIM_Init( p_timer, &tim );

  return base / div;
}

u32 platform_pwm_set_clock( unsigned id, u32 clock )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];
  u32 base = ( SCU_GetPCLKFreqValue() * 1000 );
  u32 div = base / clock;

  TIM_PrescalerConfig( p_timer, ( u8 )div - 1 );
  return base / div;
}

u32 platform_pwm_get_clock( unsigned id )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];

  return ( SCU_GetPCLKFreqValue() * 1000 ) / ( TIM_GetPrescalerValue( p_timer ) + 1 );
}

void platform_pwm_start( unsigned id )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];

  TIM_CounterCmd( p_timer, TIM_START );
}

void platform_pwm_stop( unsigned id )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];

  TIM_CounterCmd( p_timer, TIM_STOP );
}

u32 platform_spi_setup( unsigned id, int mode, u32 clock, unsigned cpol, unsigned cpha, unsigned databits )
{
  const u32 basefreq = CPU_FREQUENCY;
  u32 prescaler, divider = 1, temp, mindiff = 0xFFFFFFFF, minp;
  GPIO_InitTypeDef  GPIO_InitStructure;
  SSP_InitTypeDef SSP_InitStructure;

  clock = UMIN( clock, basefreq >> 1 );
  prescaler = UMIN( basefreq / clock, SPI_MAX_PRESCALER );
  if( basefreq / prescaler > clock )
    prescaler ++;
  if( prescaler & 1 )
    prescaler ++;
  if( prescaler > 254 )
  {
    temp = prescaler;
    for( prescaler = minp = 2; prescaler <= 254; prescaler += 2 )
    {
      divider = temp / prescaler;
      if( divider <= 255 )
      {
        if( ABSDIFF( divider * prescaler, temp ) < mindiff )
        {
          mindiff = ABSDIFF( divider * prescaler, temp );
          minp = prescaler;
          if( mindiff == 0 )
            break;
        }
      }
    }
    prescaler = minp;
    divider = temp / prescaler;
  }

  if ( id == 0 )
  {
    // GPIO setup
    // Fixed assignment:
    // P5.4 - SCLK
    // P5.5 - MOSI
    // P5.6 - MISO
    // P5.7 - CS
    GPIO_InitStructure.GPIO_Direction = GPIO_PinOutput;
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4 | GPIO_Pin_5 | GPIO_Pin_7;
    GPIO_InitStructure.GPIO_Type = GPIO_Type_PushPull;
    GPIO_InitStructure.GPIO_Alternate = GPIO_OutputAlt2;
    GPIO_Init(GPIO5, &GPIO_InitStructure);
    GPIO_InitStructure.GPIO_Direction = GPIO_PinInput;
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
    GPIO_InitStructure.GPIO_IPConnected = GPIO_IPConnected_Enable;
    GPIO_InitStructure.GPIO_Alternate = GPIO_InputAlt1  ;
    GPIO_Init(GPIO5, &GPIO_InitStructure);

    // Actual SPI setup
    SSP_DeInit(SSP0);
    SSP_InitStructure.SSP_FrameFormat = SSP_FrameFormat_Motorola;
    SSP_InitStructure.SSP_Mode = SSP_Mode_Master;
    SSP_InitStructure.SSP_CPOL = cpol == 0 ? SSP_CPOL_Low : SSP_CPOL_High;
    SSP_InitStructure.SSP_CPHA = cpha == 0 ? SSP_CPHA_1Edge : SSP_CPHA_2Edge;
    SSP_InitStructure.SSP_DataSize = databits - 1;
    SSP_InitStructure.SSP_ClockRate = divider - 1;
    SSP_InitStructure.SSP_ClockPrescaler = prescaler;
    SSP_Init(SSP0, &SSP_InitStructure);

    // Enable peripheral   
    SSP_Cmd(SSP0, ENABLE);
  }
  else if ( id == 1 )
  {
    // GPIO setup
    // Fixed assignment:
    // P1.0 - SCLK
    // P1.1 - MOSI
    // P1.2 - MISO
    // P1.3 - CS
    GPIO_InitStructure.GPIO_Direction = GPIO_PinOutput;
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0;
    GPIO_InitStructure.GPIO_Type = GPIO_Type_PushPull;
    GPIO_InitStructure.GPIO_Alternate = GPIO_OutputAlt3;
    GPIO_Init(GPIO1, &GPIO_InitStructure);
	
    GPIO_InitStructure.GPIO_Direction = GPIO_PinOutput;
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_1 | GPIO_Pin_3;
    GPIO_InitStructure.GPIO_Type = GPIO_Type_PushPull;
    GPIO_InitStructure.GPIO_Alternate = GPIO_OutputAlt3;
    GPIO_Init(GPIO1, &GPIO_InitStructure);
	
    GPIO_InitStructure.GPIO_Direction = GPIO_PinInput;
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;
    GPIO_InitStructure.GPIO_IPConnected = GPIO_IPConnected_Enable;
    GPIO_InitStructure.GPIO_Alternate = GPIO_InputAlt1;
    GPIO_Init(GPIO1, &GPIO_InitStructure);

    // Actual SPI setup
    SSP_DeInit(SSP1);
    SSP_InitStructure.SSP_FrameFormat = SSP_FrameFormat_Motorola;
    SSP_InitStructure.SSP_Mode = SSP_Mode_Master;
    SSP_InitStructure.SSP_CPOL = cpol == 0 ? SSP_CPOL_Low : SSP_CPOL_High;
    SSP_InitStructure.SSP_CPHA = cpha == 0 ? SSP_CPHA_1Edge : SSP_CPHA_2Edge;
    SSP_InitStructure.SSP_DataSize = databits - 1;
    SSP_InitStructure.SSP_ClockRate = divider - 1;
    SSP_InitStructure.SSP_ClockPrescaler = prescaler;
    SSP_Init(SSP1, &SSP_InitStructure);

    // Enable peripheral   
    SSP_Cmd(SSP1, ENABLE);
  }
  
  // All done
  return basefreq / ( prescaler * divider );
}

spi_data_type platform_spi_send_recv( unsigned id, spi_data_type data )
{
  if (id == 0)
  {
    // Send byte through the SSP0 peripheral
    SSP0->DR = data;
    // Loop while Transmit FIFO is full
    while(SSP_GetFlagStatus(SSP0, SSP_FLAG_TxFifoEmpty) == RESET);
    // Loop while Receive FIFO is empty
    while(SSP_GetFlagStatus(SSP0, SSP_FLAG_RxFifoNotEmpty) == RESET); 
    // Return the byte read from the SSP bus
    return SSP0->DR;  
  }
  else
  {
    // Send byte through the SSP1 peripheral
    SSP1->DR = data;
    // Loop while Transmit FIFO is full
    while(SSP_GetFlagStatus(SSP1, SSP_FLAG_TxFifoEmpty) == RESET);
    // Loop while Receive FIFO is empty
    while(SSP_GetFlagStatus(SSP1, SSP_FLAG_RxFifoNotEmpty) == RESET); 
    // Return the byte read from the SSP bus
    return SSP1->DR;  
  }
}
